app01-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intranet-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: intranet-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01-deployment
  namespace: intranet-app
spec:
  selector:
    matchLabels:
      app: app01
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - name: app01
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app02-deployment
  namespace: intranet-app
spec:
  selector:
    matchLabels:
      app: app02
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: app02
    spec:
      containers:
      - name: app02
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app01-ingress
  namespace: intranet-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app01.demo.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app01-deployment
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app02-ingress
  namespace: intranet-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app02.demo.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app02-deployment
                port:
                  number: 80
